--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -29,7 +29,7 @@
                         <a href="#" class="dropdown-item">Parrainage</a>
                         <a href="#" class="dropdown-item">Affiliation</a>
                         <div class="dropdown-divider"></div>
-                        <a href="#" class="dropdown-item">Contactez nous</a>
+                        <a href="{{path('pages_contact')}}" class="dropdown-item">Contactez nous</a>
                 </div>
             </li>
         </ul>
