--- a/templates/thread/index.html.twig
+++ b/templates/thread/index.html.twig
@@ -15,6 +15,8 @@
 						<div class="mb-2">Postez votre message</div>
 						{{form_start(form)}}
 						{{form_row(form.content)}}
+						{{form_row(form.media)}}
+						{{form_errors(form)}}
 						<button class="btn btn-primary mt-3" type="submit">Ajouter son message</button>
 						{{form_end(form)}}
 					</div>
