--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -1,80 +1,99 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="{{ path('homepage') }}">Le Trading</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
-            aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarColor01">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="{{ path('homepage') }}">Accueil</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Discussions</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Live</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Historiques</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{ path('offers_index') }}">Offres</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#">Divers</a>
-                <div class="dropdown-menu dropdown-menu-center">
-                    <a href="#" class="dropdown-item">Témoignage</a>
-                    <a href="#" class="dropdown-item">Lexique</a>
-                    <a href="#" class="dropdown-item">Qui sommes nous ?</a>
-                    <a href="#" class="dropdown-item">Parrainage</a>
-                    <a href="#" class="dropdown-item">Affiliation</a>
-                    <div class="dropdown-divider"></div>
-                    <a href="{{ path('pages_contact') }}" class="dropdown-item">Contactez nous</a>
-                </div>
-            </li>
-        </ul>
-        <ul class="navbar-nav ml-auto">
-            {% if app.user %}
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#">
-                        {% if app.user.media %}
-                            <img src="{{ vich_uploader_asset(app.user.media, 'imageFile', 'App\\Entity\\Media') }}"
-                                 class="avatar avatar-mini" alt="{{ app.user.fullName }}">
-                            {{ app.user.fullName }}
-                        {% else %}
-                            <img src="{{ asset('images/image-user.png') }}" alt="Avatar de {{ app.user.pseudo }}"
-                                 class="avatar avatar-mini"/>
-                            {{ app.user.fullName }}
+	<a class="navbar-brand" href="{{ path('homepage') }}">Le Trading</a>
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	</button>
+	<div class="collapse navbar-collapse" id="navbarColor01">
+		<ul class="navbar-nav">
+			<li class="nav-item">
+				<a class="nav-link" href="{{ path('homepage') }}">Accueil</a>
+			</li>
+			<li class="nav-item dropdown">
+				<a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">Discussions</a>
+				<ul class="dropdown-menu dropdown-menu-center">
+					<li>
+						<a href="{{ path('thread_show', {'slug':'indices'}) }}" class="dropdown-item">Indices</a>
+					</li>
+					<li>
+						<a href="{{ path('thread_show', {'slug':'forex'}) }}" class="dropdown-item">Forex</a>
+					</li>
+					<li>
+						<a href="{{ path('thread_show', {'slug':'action'}) }}" class="dropdown-item">Action</a>
+					</li>
+				</ul>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#">Live</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#">Historiques</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="{{ path('offers_index') }}">Offres</a>
+			</li>
+			<li class="nav-item dropdown">
+				<a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">Divers</a>
+				<ul class="dropdown-menu dropdown-menu-center">
+					<li>
+						<a href="#" class="dropdown-item">Témoignage</a>
+					</li>
+					<li>
+						<a href="#" class="dropdown-item">Lexique</a>
+					</li>
+					<li>
+						<a href="#" class="dropdown-item">Qui sommes nous ?</a>
+					</li>
+					<li>
+						<a href="#" class="dropdown-item">Parrainage</a>
+					</li>
+					<li>
+						<a href="#" class="dropdown-item">Affiliation</a>
+					</li>
+					<li class="dropdown-divider"></li>
+					<li>
+						<a href="{{ path('pages_contact') }}" class="dropdown-item">Contactez nous</a>
+					</li>
+				</ul>
+			</li>
+		</ul>
+		<ul class="navbar-nav ml-auto">
+			{% if app.user %}
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#">
+						{% if app.user.media %}
+							<img src="{{ vich_uploader_asset(app.user.media, 'imageFile', 'App\\Entity\\Media') }}" class="avatar avatar-mini" alt="{{ app.user.fullName }}">
+							{{ app.user.fullName }}
+						{% else %}
+							<img src="{{ asset('images/image-user.png') }}" alt="Avatar de {{ app.user.pseudo }}" class="avatar avatar-mini"/>
+							{{ app.user.fullName }}
 
-                        {% endif %}
-                    </a>
+						{% endif %}
+					</a>
 
-                    <div class="dropdown-menu dropdown-menu-right">
-                        <a href="{{ path('account_index') }}" class="dropdown-item">Mon compte</a>
-                        <a href="#" class="dropdown-item">Mes abonnements</a>
-                        <div class="dropdown-divider"></div>
-                        <a href="{{ path('account_logout') }}" class="dropdown-item">Déconnexion</a>
-                    </div>
-                </li>
-            {% else %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('account_register') }}">Inscription</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('account_login') }}">Connexion</a>
-                </li>
-            {% endif %}
-        </ul>
-    </div>
+					<div class="dropdown-menu dropdown-menu-right">
+						<a href="{{ path('account_index') }}" class="dropdown-item">Mon compte</a>
+						<a href="#" class="dropdown-item">Mes abonnements</a>
+						<div class="dropdown-divider"></div>
+						<a href="{{ path('account_logout') }}" class="dropdown-item">Déconnexion</a>
+					</div>
+				</li>
+			{% else %}
+				<li class="nav-item">
+					<a class="nav-link" href="{{ path('account_register') }}">Inscription</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="{{ path('account_login') }}">Connexion</a>
+				</li>
+			{% endif %}
+		</ul>
+	</div>
 </nav>
-
 {% for label, messages in app.flashes %}
-    <div class="container">
-        <div class="alert alert-{{ label }}">
-            {% for message in messages %}
-                <p>{{ message | raw }}</p>
-            {% endfor %}
-        </div>
-    </div>
+	<div class="container">
+		<div class="alert alert-{{ label }}">
+			{% for message in messages %}
+				<p>{{ message | raw }}</p>
+			{% endfor %}
+		</div>
+	</div>
 {% endfor %}
