--- a/templates/offers/index.html.twig
+++ b/templates/offers/index.html.twig
@@ -18,7 +18,7 @@
 							{% endif %}
 						</h1>
 						<ul class="list-unstyled mt-3 mb-4">
-							{{offer.description}}
+							{{offer.description | raw}}
 						</ul>
 						<a href="{{path('offers_show', {'title' : offer.title})}}" class="btn btn-lg btn-block btn-primary">Découvrir</a>
 
