--- a/templates/offers/show.html.twig
+++ b/templates/offers/show.html.twig
@@ -18,7 +18,7 @@
 							{% endif %}
 						</h1>
 						<ul class="list-unstyled mt-3 mb-4">
-							{{offer.description}}
+							{{offer.description | raw}}
 						</ul>
 						<a href="{{path('order_prepare', {'title':offer.title})}}" class="btn btn-lg btn-block btn-primary">Je m'abonne</a>
 
