--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="{{ path('homepage') }}">Le Trading</a>
+    <a href="{{ path('homepage') }}"><img src="\images\logo-letrading.png"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
             aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -9,9 +9,15 @@
             <li class="nav-item">
                 <a class="nav-link" href="{{ path('homepage') }}">Accueil</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Discussions</a>
-            </li>
+            <li class="nav-item dropdown">
+				<a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">Discussions</a>
+				<ul class="dropdown-menu dropdown-menu-center">
+                    {{ render(controller(
+                            'App\\Controller\\PagesController::getThreads'
+                        ))
+                    }}
+				</ul>
+			</li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Live</a>
             </li>
