modif homepage design + add fix users fixtures + param trade forum

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -10,12 +10,11 @@
 {% endblock %}
 
 {% block body %}
-<div class="container">
     <section id="intro" class="clearfix">
-        <div class="container d-flex h-100">
+        <div class="container d-flex h-100" style="margin-top:0!important;">
             <div class="row justify-content-center align-self-center">
                 <div class="col-md-6 intro-info order-md-first order-last">
-                    <h2>Rapid Solutions<br>for Your <span>Business!</span></h2>
+                    <h2>La référence n°1<br>du<span> trading Français !</span></h2>
                 </div>
                 <div class="col-md-6 intro-img order-md-last order-first">
                     <img src="images/templating/intro-img.svg" alt="" class="img-fluid">
@@ -39,7 +38,7 @@
 
                     <div class="col-lg-7 col-md-6">
                         <div class="about-content">
-                            <h2>About Us</h2>
+                            <h2>Qui sommes nous ?</h2>
                             <h3>Odio sed id eos et laboriosam consequatur eos earum soluta.</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                             <p>Aut dolor id. Sint aliquam consequatur ex ex labore. Et quis qui dolor nulla dolores neque. Aspernatur consectetur omnis numquam quaerat. Sed fugiat nisi. Officiis veniam molestiae. Et vel ut quidem alias veritatis repudiandae ut fugit. Est ut eligendi aspernatur nulla voluptates veniam iusto vel quisquam. Fugit ut maxime incidunt accusantium totam repellendus eum error. Et repudiandae eum iste qui et ut ab alias.</p>
@@ -63,7 +62,7 @@
             <div class="container">
 
                 <header class="section-header">
-                    <h3>Services</h3>
+                    <h3>Nos Services</h3>
                     <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus.</p>
                 </header>
 
@@ -126,7 +125,7 @@
             <div class="container-fluid">
 
                 <header class="section-header">
-                    <h3>Why choose us?</h3>
+                    <h3>Pourquoi nous choisir ?</h3>
                     <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus.</p>
                 </header>
 
@@ -173,23 +172,23 @@
             <div class="container">
                 <div class="row counters">
                     <div class="col-lg-3 col-6 text-center">
-                        <span data-toggle="counter-up">274</span>
+                        <span data-toggle="counter-up">421</span>
                         <p>Clients</p>
                     </div>
 
                     <div class="col-lg-3 col-6 text-center">
-                        <span data-toggle="counter-up">421</span>
-                        <p>Projects</p>
+                        <span data-toggle="counter-up">2</span>
+                        <p>Formations</p>
                     </div>
 
                     <div class="col-lg-3 col-6 text-center">
                         <span data-toggle="counter-up">1,364</span>
-                        <p>Hours Of Support</p>
+                        <p>Heures de support</p>
                     </div>
 
                     <div class="col-lg-3 col-6 text-center">
-                        <span data-toggle="counter-up">18</span>
-                        <p>Hard Workers</p>
+                        <span data-toggle="counter-up">4</span>
+                        <p>Professionels</p>
                     </div>
                 </div>
             </div>
@@ -261,59 +260,54 @@
           Clients Section
         ============================-->
         <section id="testimonials">
-            <div class="container">
+            <header class="section-header">
+                <h3>Avis clients</h3>
+            </header>
 
-                <header class="section-header">
-                    <h3>Testimonials</h3>
-                </header>
+            <div class="row justify-content-center">
+                <div class="col-lg-8">
 
-                <div class="row justify-content-center">
-                    <div class="col-lg-8">
+                    <div class="owl-carousel testimonials-carousel wow fadeInUp">
 
-                        <div class="owl-carousel testimonials-carousel wow fadeInUp">
+                        <div class="testimonial-item">
+                            <img src="images/templating/testimonial-1.jpg" class="testimonial-img" alt="">
+                            <h3>Saul Goodman</h3>
+                            <h4>Ceo &amp; Founder</h4>
+                            <p>
+                                Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                            </p>
+                        </div>
 
-                            <div class="testimonial-item">
-                                <img src="images/templating/testimonial-1.jpg" class="testimonial-img" alt="">
-                                <h3>Saul Goodman</h3>
-                                <h4>Ceo &amp; Founder</h4>
-                                <p>
-                                    Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
-                                </p>
-                            </div>
+                        <div class="testimonial-item">
+                            <img src="images/templating/testimonial-2.jpg" class="testimonial-img" alt="">
+                            <h3>Sara Wilsson</h3>
+                            <h4>Designer</h4>
+                            <p>
+                                Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                            </p>
+                        </div>
 
-                            <div class="testimonial-item">
-                                <img src="images/templating/testimonial-2.jpg" class="testimonial-img" alt="">
-                                <h3>Sara Wilsson</h3>
-                                <h4>Designer</h4>
-                                <p>
-                                    Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
-                                </p>
-                            </div>
+                        <div class="testimonial-item">
+                            <img src="images/templating/testimonial-3.jpg" class="testimonial-img" alt="">
+                            <h3>Jena Karlis</h3>
+                            <h4>Store Owner</h4>
+                            <p>
+                                Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                            </p>
+                        </div>
 
-                            <div class="testimonial-item">
-                                <img src="images/templating/testimonial-3.jpg" class="testimonial-img" alt="">
-                                <h3>Jena Karlis</h3>
-                                <h4>Store Owner</h4>
-                                <p>
-                                    Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
-                                </p>
-                            </div>
-
-                            <div class="testimonial-item">
-                                <img src="images/templating/testimonial-4.jpg" class="testimonial-img" alt="">
-                                <h3>Matt Brandon</h3>
-                                <h4>Freelancer</h4>
-                                <p>
-                                    Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
-                                </p>
-                            </div>
-
+                        <div class="testimonial-item">
+                            <img src="images/templating/testimonial-4.jpg" class="testimonial-img" alt="">
+                            <h3>Matt Brandon</h3>
+                            <h4>Freelancer</h4>
+                            <p>
+                                Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                            </p>
                         </div>
 
                     </div>
+
                 </div>
-
-
             </div>
         </section><!-- #testimonials -->
 
@@ -323,7 +317,7 @@
         <section id="team" class="section-bg">
             <div class="container">
                 <div class="section-header">
-                    <h3>Team</h3>
+                    <h3>L'équipe</h3>
                     <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
                 </div>
 
@@ -331,11 +325,11 @@
 
                     <div class="col-lg-6 col-md-6 wow fadeInUp">
                         <div class="member">
-                            <img src="images/templating/team-1.jpg" class="img-fluid" alt="">
+                            <img src="images/templating/team-1.png" class="img-fluid" alt="">
                             <div class="member-info">
                                 <div class="member-info-content">
-                                    <h4>Walter White</h4>
-                                    <span>Chief Executive Officer</span>
+                                    <h4>Jonathan Hiel</h4>
+                                    <span>Fondateur</span>
                                     <div class="social">
                                         <a href=""><i class="fab fa-twitter"></i></a>
                                         <a href=""><i class="fab fa-facebook"></i></a>
@@ -351,8 +345,8 @@
                             <img src="images/templating/team-2.jpg" class="img-fluid" alt="">
                             <div class="member-info">
                                 <div class="member-info-content">
-                                    <h4>Sarah Jhonson</h4>
-                                    <span>Product Manager</span>
+                                    <h4>Clément Girot</h4>
+                                    <span>Co-fondateur</span>
                                     <div class="social">
                                         <a href=""><i class="fab fa-twitter"></i></a>
                                         <a href=""><i class="fab fa-facebook"></i></a>
@@ -397,10 +391,9 @@
           Pricing Section
         ============================-->
         <section id="pricing" class="wow fadeInUp section-bg">
-
             <div class="container">
                 <header class="section-header">
-                    <h3>Pricing</h3>
+                    <h3>Formations</h3>
                     <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
                 </header>
 
@@ -423,7 +416,7 @@
                                     <ul class="list-group">
                                         {{offer.description | raw}}
                                     </ul>
-                                    <a href="#" class="btn">J'achete</a>
+                                    <a href="{{path('offers_show', {'title' : offer.title})}}" class="btn">J'en profite</a>
                                 </div>
                             </div>
                         </div>
@@ -503,7 +496,6 @@
             </div>
         </section>#}<!-- #faq -->
     </main>
-</div>
 {% endblock %}
 
 {% block javascripts %}
