--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -1,3 +1,3 @@
-<footer class="mt-5 bg-light py-5 text-center">
+<footer class="bg-primary py-5 text-center" style="color:white;">
     <p>Copyright Le Trading !</p>
 </footer>
