Avancées abonnement : cancel, reprise, factorisation du code, affichage du forum uniquement si abo ou formation

--- a/templates/offers/index.html.twig
+++ b/templates/offers/index.html.twig
@@ -5,6 +5,8 @@
 
 {% block body %}
 	<div class="container">
+		<h1 class="h3 text-center my-5">Liste des offres</h1>
+
 		<div class="card-deck mb-3 text-center">
 			{% for offer in offers %}
 				<div class="card mb-4 box-shadow">
