--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -9,13 +9,15 @@
 				<a class="nav-link" href="{{ path('homepage') }}">Accueil</a>
 			</li>
 			<li class="nav-item dropdown">
-				<a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">Discussions</a>
+				<a class="nav-link dropdown-toggle {% if not app.user.hasActiveSubscription and app.user.payments | length == 0 %} disabled {% endif %}" href="#" data-toggle="dropdown">Discussions</a>
+				{% if app.user.hasActiveSubscription or app.user.payments | length > 0 %}
 				<ul class="dropdown-menu dropdown-menu-center">
 					{{ render(controller(
                             'App\\Controller\\PagesController::getThreads'
                         ))
                     }}
 				</ul>
+				{% endif %}
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="#">Live</a>
@@ -54,7 +56,7 @@
 
 					<div class="dropdown-menu dropdown-menu-right">
 						<a href="{{ path('account_index') }}" class="dropdown-item">Mon compte</a>
-						<a href="#" class="dropdown-item">Mes abonnements</a>
+						<a href="{{ path('manage_souscription') }}" class="dropdown-item">Mes abonnements</a>
 						<div class="dropdown-divider"></div>
 						<a href="{{ path('account_logout') }}" class="dropdown-item">Déconnexion</a>
 					</div>
