--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -42,7 +42,7 @@
                 </div>
                 <div class="card border-primary mb-3 ml-3 mr-3 col-4" style="max-width: 20rem;">
                     <div class="card-body text-center">
-                        <a href="{{ path('account_profile') }}" class="btn btn-primary mr-2 mb-2">Gérer mes
+                        <a href="{{ path('manage_souscription') }}" class="btn btn-primary mr-2 mb-2">Gérer mes
                             abonnements</a>
                         <br><br>
                         <a href="{{ path('account_profile') }}"><i class="fas fa-cogs fa-4x primary-color"></i></a>
